# mfd-host

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  requirements_os.txt
.github/workflows/: main.yml  manual_release.yml  pull_request.yml  pull_requests.yml  run_tests.yml
examples/: cpu_feature_example.py  device_feature_example.py  interface_refresh_examples.py  simple_example.py  stats_feature.py  utils_feature.py
mfd_host/: base.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst
tests/unit/test_mfd_host/: test_base.py
tests/unit/test_mfd_host/test_feature/test_cpu/: __init__.py  test_esxi.py  test_freebsd.py  test_linux.py  test_windows.py
tests/unit/test_mfd_host/test_feature/test_device/: __init__.py  test_base.py  test_windows.py
tests/unit/test_mfd_host/test_feature/test_memory/: __init__.py  test_base.py  test_esxi.py  test_freebsd.py  test_linux.py  test_windows.py
tests/unit/test_mfd_host/test_feature/test_service/: test_esxi.py  test_linux.py
tests/unit/test_mfd_host/test_feature/test_stats/: test_esxi.py  test_freebsd.py  test_linux.py  test_windows.py
tests/unit/test_mfd_host/test_feature/test_utils/: test_base.py  test_freebsd.py  test_linux.py
